# HowToUseTemplateInCuda

./: CMakeLists.txt  README.md  compile.sh
include/: Triangle_r.cu  Triangle_r.cuh
src/: main.cu
